@startuml
    entity users{
        *id :  BIGINT
        --
        *username : varchar(50)
        *password : varchar(255)
}

    entity ingredients{
        *id :  BIGINT
        --
        *name : varchar(50)
        description : varchar(2048)
        photo : varchar(2048)
        *category_id : BIGINT
}

    entity cocktails {
        *id :  BIGINT
        --
        *name : varchar(50)
        *description : varchar(255)
        *recipe : varchar(2000)
        *ingredient_list : List<ingredient_id>
        *owner : user_id
        *calculated_rating : DECIMAL(4,2)
        *view count : int
}

    entity cocktails_ingredients{
        cocktail_id : BIGINT
        ingredient_id : BIGINT
}

    entity tags {
        *id :  BIGINT
        --
        *name : varchar(50)
}

    entity rating{
        *user_id :  BIGINT
        *cocktail_id :  BIGINT
        --
        * rating : int
}

    entity cocktails_tags {
        *coctail_id : BIGINT
        *tags_id : BIGINT
    }

    entity category {
    *id : BIGINT
    *name : varchar(255)
    }

    users ||..o{ cocktails
    users ||..o{ rating
    cocktails ||..o{ rating
    ingredients ||..|{ category
    cocktails_tags }|..o| cocktails
    cocktails_tags }|..o| tags
    cocktails_ingredients }|..|| cocktails
    cocktails_ingredients }|..o| ingredients



@enduml